<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/mainColor"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/Formlogin1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/Title_Quiz"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/c_black"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/soal"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/Formsoal"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_soal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/Form_Proses"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/c_white"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/Formsoal">
        <Button
            android:id="@+id/Proses_Quiz"
            android:text="@string/sendquestion"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/m_button"/>
    </LinearLayout>
        <LinearLayout
            android:id="@+id/FormHasil"
            android:background="@color/c_white"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:text="0"
                android:textSize="25dp"
                android:textColor="@color/c_black"
                android:id="@+id/Hasil_Quiz"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <Button
                android:id="@+id/Ulangi_Quiz"
                android:text="@string/Requiz"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/m_button"/>
            <Button
                android:id="@+id/Keluar_Quiz"
                android:text="@string/Exit"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/m_button"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>