<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fitur.Menu_Login">>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/formlogin"
            android:layout_width="match_parent"
            android:layout_height="318dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                untuk logo-->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/insertemail" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--                untuk logo-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/insertpassword"
                        android:inputType="textPassword" />


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/m_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/c_white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/lupa"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:text="@string/lupa"
                android:textAllCaps="false"
                android:textColor="@color/mainTextDark"
                android:textSize="17sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</ScrollView>