<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#193446"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fitur.Menu_Register">>




    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/formregist"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                untuk logo-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/email"
                        android:hint="@string/insertemail"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>




            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <!--                untuk logo-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:hint="@string/insertpassword"/>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <!--                untuk logo-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/repassword"
                        android:inputType="textPassword"
                        android:hint="@string/repsw"/>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Silahkan Pilih Jenis Akun"
                android:id="@+id/jenisakun"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:id="@+id/pilihan"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Orang Tua"
                    android:id="@+id/pilihanA"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Anak"
                    android:id="@+id/pilihanB"/>
            </RadioGroup>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                untuk logo-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/kata_pengingat"
                        android:hint="@string/kata_pengingat"/>
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/btn_register"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/m_button"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/c_white"
                android:textSize="17sp" />

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/sudah"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/m_button"
                android:text="@string/sudah"
                android:textAllCaps="false"
                android:textColor="@color/c_white"
                android:textSize="17sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>
</ScrollView>