<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#193446"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fitur.OrangTua.Tugas">>




    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/formtambahtugas"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/c_black"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/daftartugas"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

<!--                untuk logo&ndash;&gt;-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/daftartugas"
                        android:hint="@string/masukkantugas"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/btn_tambahtugas"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/m_button"
                android:text="@string/tambahtugas"
                android:textAllCaps="false"
                android:textColor="@color/c_white"
                android:textSize="17sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:id="@+id/listtugas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>
</ScrollView>