<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/mainColor"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/Formlogin"
        app:cardCornerRadius="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/in"
                android:textColor="@color/mainTextDark"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/pass_ic"
                    android:paddingEnd="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/MasukPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTintMode="@color/mainColor"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        tools:targetApi="lollipop" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/Btn_Masuk"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/m_button"
                android:text="@string/in"
                android:textAllCaps="false"
                android:textColor="@color/c_white"
                android:textSize="17sp" />
            <Button
                android:id="@+id/Lupa_Masuk"
                android:layout_width="243dp"
                android:layout_height="29dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/not_acc"
                android:textAllCaps="false"
                android:textColor="@color/mainTextDark"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>